redesign ui for home and part master
